--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,6 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -23,13 +22,10 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0-rc02'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
 
 ext {
-    bintrayRepo = 'maven'
+    bintrayRepo = 'Nice-Android-Animation'
     bintrayName = 'Nice-Android-Animation'
 
     publishedGroupId = 'com.abuqauod.animation'
@@ -40,8 +36,8 @@ ext {
             '\n' +
             'Designed simply and elegant these components are easy to integrate during development process'
 
-    siteUrl = 'https://github.com/abuqauod/NiceAndroidAnimation/'
-    gitUrl = 'https://github.com/abuqauod/NiceAndroidAnimation.git'
+    siteUrl = 'https://github.com/abuqauod/Nice-Android-Animation'
+    gitUrl = 'https://github.com/abuqauod/Nice-Android-Animation.git'
 
     libraryVersion = '1.0'
 
